# unifile_extractor

./: .buildinfo  .gitignore  README.md  _README_docs.html  api.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: _README_docs.doctree  api.doctree  environment.pickle  index.doctree  install.doctree  usage.doctree
.doctrees/autoapi/src/cli_unifile/: index.doctree
.doctrees/autoapi/src/cli_unifile/cli/: index.doctree
.doctrees/autoapi/src/unifile/: index.doctree
.doctrees/autoapi/src/unifile/extractors/: index.doctree
.doctrees/autoapi/src/unifile/extractors/archive_extractor/: index.doctree
.doctrees/autoapi/src/unifile/extractors/audio_extractor/: index.doctree
.doctrees/autoapi/src/unifile/extractors/base/: index.doctree
.doctrees/autoapi/src/unifile/extractors/docx_extractor/: index.doctree
.doctrees/autoapi/src/unifile/extractors/eml_extractor/: index.doctree
.doctrees/autoapi/src/unifile/extractors/epub_extractor/: index.doctree
.doctrees/autoapi/src/unifile/extractors/html_extractor/: index.doctree
.doctrees/autoapi/src/unifile/extractors/img_extractor/: index.doctree
.doctrees/autoapi/src/unifile/pipeline/: index.doctree
.doctrees/autoapi/src/unifile/processing/: index.doctree
.doctrees/autoapi/src/unifile/utils/: index.doctree
.doctrees/example_notebooks/: pdf_extract.doctree
.doctrees/tutorials/: cli_usage.doctree  media.doctree
.github/workflows/: ci.yml  gh_pages.yml
_modules/: index.html
_modules/src/: cli_unifile.html  unifile.html
_modules/src/cli_unifile/: cli.html
_modules/src/unifile/: pipeline.html
_modules/src/unifile/extractors/: archive_extractor.html  audio_extractor.html  base.html  docx_extractor.html  eml_extractor.html  epub_extractor.html  html_extractor.html  img_extractor.html  json_extractor.html  pdf_extractor.html  pptx_extractor.html  txt_extractor.html  video_extractor.html  xlsx_extractor.html  xml_extractor.html
_modules/src/unifile/processing/: postprocess.html
_modules/src/unifile/utils/: utils.html
_sources/: _README_docs.md.txt  api.rst.txt  install.md.txt  usage.md.txt
_sources/autoapi/src/cli_unifile/: index.rst.txt
_sources/autoapi/src/cli_unifile/cli/: index.rst.txt
_sources/autoapi/src/unifile/: index.rst.txt
_sources/autoapi/src/unifile/extractors/: index.rst.txt
_sources/autoapi/src/unifile/pipeline/: index.rst.txt
_sources/autoapi/src/unifile/processing/: index.rst.txt
_sources/autoapi/src/unifile/utils/: index.rst.txt
_sources/example_notebooks/: pdf_extract.ipynb.txt
_sources/tutorials/: cli_usage.md.txt
_static/data/: sample_drawing_extracted.csv
autoapi/src/cli_unifile/: index.html
autoapi/src/cli_unifile/cli/: index.html
autoapi/src/unifile/: index.html
autoapi/src/unifile/extractors/: index.html
autoapi/src/unifile/extractors/archive_extractor/: index.html
autoapi/src/unifile/extractors/audio_extractor/: index.html
autoapi/src/unifile/extractors/base/: index.html
autoapi/src/unifile/extractors/docx_extractor/: index.html
autoapi/src/unifile/extractors/eml_extractor/: index.html
autoapi/src/unifile/extractors/epub_extractor/: index.html
autoapi/src/unifile/extractors/html_extractor/: index.html
autoapi/src/unifile/extractors/img_extractor/: index.html
autoapi/src/unifile/extractors/json_extractor/: index.html
autoapi/src/unifile/extractors/pdf_extractor/: index.html
autoapi/src/unifile/extractors/pptx_extractor/: index.html
autoapi/src/unifile/extractors/txt_extractor/: index.html
autoapi/src/unifile/extractors/video_extractor/: index.html
autoapi/src/unifile/extractors/xlsx_extractor/: index.html
autoapi/src/unifile/extractors/xml_extractor/: index.html
autoapi/src/unifile/pipeline/: index.html
autoapi/src/unifile/processing/: index.html
autoapi/src/unifile/processing/postprocess/: index.html
autoapi/src/unifile/utils/: index.html
autoapi/src/unifile/utils/utils/: index.html
docs/sources/: LICENSE  Makefile  conf.py  index.rst  install.md  media.md  schema.md  usage.md
docs/sources/_static/css/: hide-footer.css
docs/sources/_templates/: custom-class-template.rst  custom-module-template.rst
docs/sources/tutorials/: cli_usage.md  getting_started.rst  html_extraction.md  media.md  recipes.md  webscraping.md
example_notebooks/: pdf_extract.html
examples/: README.md  batch_to_parquet.py  extract_html.sh  postprocessing_pipeline.py  quickstart.py  webscrape.py
src/cli_unifile/: __init__.py  cli.py
src/unifile/: __init__.py  core.py  metadata.py  outputs.py  pipeline.py  schema_v1.json
src/unifile/extractors/: __init__.py  archive_extractor.py  audio_extractor.py  base.py  docx_extractor.py  eml_extractor.py  epub_extractor.py  html_extractor.py  html_product_extractor.py  img_extractor.py  json_extractor.py  msg_extractor.py  pdf_extractor.py  pptx_extractor.py  text_extractor.py  txt_extractor.py  video_extractor.py  web_extractor.py  xlsx_extractor.py  xml_extractor.py
src/unifile/media/: asr.py
src/unifile/processing/: manifest.py  postprocess.py  provenance.py  schema.py
src/unifile/utils/: utils.py
tests/: conftest.py
tests/integration/: test_cli_local.py  test_cli_url.py  test_media_integration.py  test_pipeline_end_to_end.py  test_schema_contract.py  utils_build_samples.py
tests/unit/: test_async_api.py  test_cli_config.py  test_cli_outputs.py  test_cli_validate.py  test_manifest_dedupe.py  test_pipeline.py  test_pipeline_runtime_options.py  test_plugins.py  test_provenance.py
tests/unit/extractors/: test_archive_limit.py  test_audio_extractor.py  test_base.py  test_base_row.py  test_defaults_unchanged.py  test_docx_extractor.py  test_eml_extractor.py  test_html_extractor.py  test_img_extractor.py  test_pdf_extractor.py  test_pptx_extractor.py  test_text_extractor.py  test_txt_extractor.py  test_video_extractor.py  test_xlsx_extractor.py
tests/unit/media/: test_media_and_outputs.py
tests/unit/utils/: __init__.py  test_utils.py
tutorials/: cli_usage.html  media.html
(+26 files in other folders)
